@@ -1,3 +1,10 @@
+Mon May 24 13:44:13 2004  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/WorkspaceCreator.pm:
+
+          Print out the projects involved when warning about circular
+          dependencies.
+
 Mon May 24 07:35:39 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * config/zzip.mpb:
